--- a/package.json
+++ b/package.json
@@ -9,18 +9,59 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.0",
+    "@material-tailwind/react": "^2.1.9",
+    "@prisma/client": "^5.21.1",
+    "@progress/kendo-drawing": "^1.20.4",
+    "@progress/kendo-licensing": "^1.3.5",
+    "@progress/kendo-react-buttons": "^8.4.0",
+    "@progress/kendo-react-dialogs": "^8.4.0",
+    "@progress/kendo-react-dropdowns": "^8.4.0",
+    "@progress/kendo-react-editor": "^8.4.0",
+    "@progress/kendo-react-inputs": "^8.4.0",
+    "@progress/kendo-react-intl": "^8.4.0",
+    "@progress/kendo-react-layout": "^8.4.0",
+    "@progress/kendo-react-pdf": "^8.4.0",
+    "@progress/kendo-react-popup": "^8.4.0",
+    "@progress/kendo-react-progressbars": "^8.4.0",
+    "@progress/kendo-svg-icons": "^3.1.0",
+    "@progress/kendo-theme-default": "^9.0.0",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "date-fns": "^3.6.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.427.0",
+    "next": "^14.2.13",
+    "next-auth": "^4.24.10",
+    "quill": "^1.3.7",
+    "react": "^18.2.0",
+    "react-datepicker": "^7.4.0",
+    "react-day-picker": "^9.1.3",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
+    "react-image-gallery": "^1.3.0",
+    "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
+    "sweetalert2": "^11.6.13",
+    "swiper": "^11.1.9",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/axios": "^0.14.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/react-image-gallery": "^1.2.4",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "prisma": "^5.21.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
